[gd_scene load_steps=6 format=3 uid="uid://bptq07qw4byd2"]

[ext_resource type="Texture2D" uid="uid://2mkkic6u8bxc" path="res://LevelEditor/monochrome_tilemap_transparent_packed.png" id="1_prkvk"]
[ext_resource type="Script" path="res://Weapon.gd" id="2_xisq2"]
[ext_resource type="Resource" uid="uid://cl71fw3ji1a22" path="res://Resources/Shotgun.tres" id="3_deupu"]
[ext_resource type="Texture2D" uid="uid://v7l28n7le5w" path="res://Assets/Enemies/shotgun.png" id="4_ivjrq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nv40"]
size = Vector2(12, 12)

[node name="WeaponKiosk" type="Node2D"]
script = ExtResource("2_xisq2")
data = ExtResource("3_deupu")

[node name="Pedestal" type="Sprite2D" parent="."]
texture = ExtResource("1_prkvk")
region_enabled = true
region_rect = Rect2(48, 128, 16, 16)

[node name="WeaponSprite" type="Sprite2D" parent="."]
position = Vector2(0, -7.72778)
texture = ExtResource("4_ivjrq")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_4nv40")

[connection signal="area_entered" from="HurtboxComponent" to="." method="_on_hurtbox_component_area_entered"]
[connection signal="body_entered" from="HurtboxComponent" to="." method="_on_hurtbox_component_body_entered"]
